qt-restricted-extras/qscintilla/gen_qscilexercpp.h

class QColor;
class QFont;
class QMetaObject;
class QObject;
class QsciLexerCPP;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QTimerEvent QTimerEvent;
typedef struct QsciLexerCPP QsciLexerCPP;
typedef struct QsciScintilla QsciScintilla;
bool QsciLexerCPP_override_virtual_keywords(void* self, intptr_t slot);
bool QsciLexerCPP_override_virtual_defaultStyle(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_defaultStyle(const void* self);
bool QsciLexerCPP_override_virtual_description(void* self, intptr_t slot);
bool QsciLexerCPP_override_virtual_paper(void* self, intptr_t slot);
QColor* QsciLexerCPP_virtualbase_paper(const void* self, int style);
bool QsciLexerCPP_override_virtual_defaultColorWithStyle(void* self, intptr_t slot);
QColor* QsciLexerCPP_virtualbase_defaultColorWithStyle(const void* self, int style);
bool QsciLexerCPP_override_virtual_defaultEolFill(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_defaultEolFill(const void* self, int style);
bool QsciLexerCPP_override_virtual_defaultFontWithStyle(void* self, intptr_t slot);
QFont* QsciLexerCPP_virtualbase_defaultFontWithStyle(const void* self, int style);
bool QsciLexerCPP_override_virtual_defaultPaperWithStyle(void* self, intptr_t slot);
QColor* QsciLexerCPP_virtualbase_defaultPaperWithStyle(const void* self, int style);
bool QsciLexerCPP_override_virtual_setEditor(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setEditor(void* self, QsciScintilla* editor);
bool QsciLexerCPP_override_virtual_refreshProperties(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_refreshProperties(void* self);
bool QsciLexerCPP_override_virtual_styleBitsNeeded(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_styleBitsNeeded(const void* self);
bool QsciLexerCPP_override_virtual_wordCharacters(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_wordCharacters(const void* self);
bool QsciLexerCPP_override_virtual_setAutoIndentStyle(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setAutoIndentStyle(void* self, int autoindentstyle);
bool QsciLexerCPP_override_virtual_setColor(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setColor(void* self, QColor* c, int style);
bool QsciLexerCPP_override_virtual_setEolFill(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setEolFill(void* self, bool eoffill, int style);
bool QsciLexerCPP_override_virtual_setFont(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setFont(void* self, QFont* f, int style);
bool QsciLexerCPP_override_virtual_setPaper(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setPaper(void* self, QColor* c, int style);
bool QsciLexerCPP_override_virtual_readProperties(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_readProperties(void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerCPP_override_virtual_writeProperties(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_writeProperties(const void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerCPP_override_virtual_event(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_event(void* self, QEvent* event);
bool QsciLexerCPP_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QsciLexerCPP_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciLexerCPP_override_virtual_childEvent(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciLexerCPP_override_virtual_customEvent(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_customEvent(void* self, QEvent* event);
bool QsciLexerCPP_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciLexerCPP_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QsciLexerCPP_staticMetaObject();
void QsciLexerCPP_delete(QsciLexerCPP* self);