qt-restricted-extras/qscintilla/gen_qscilexercpp.nim

proc fcQsciLexerCPP_override_virtual_keywords(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_keywords".}
proc fQsciLexerCPP_virtualbase_defaultStyle(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_defaultStyle".}
proc fcQsciLexerCPP_override_virtual_defaultStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_defaultStyle".}
proc fcQsciLexerCPP_override_virtual_description(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_description".}
proc fQsciLexerCPP_virtualbase_paper(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_paper".}
proc fcQsciLexerCPP_override_virtual_paper(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_paper".}
proc fQsciLexerCPP_virtualbase_defaultColorWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_defaultColorWithStyle".}
proc fcQsciLexerCPP_override_virtual_defaultColorWithStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_defaultColorWithStyle".}
proc fQsciLexerCPP_virtualbase_defaultEolFill(self: pointer, style: cint): bool{.importc: "QsciLexerCPP_virtualbase_defaultEolFill".}
proc fcQsciLexerCPP_override_virtual_defaultEolFill(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_defaultEolFill".}
proc fQsciLexerCPP_virtualbase_defaultFontWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_defaultFontWithStyle".}
proc fcQsciLexerCPP_override_virtual_defaultFontWithStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_defaultFontWithStyle".}
proc fQsciLexerCPP_virtualbase_defaultPaperWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_defaultPaperWithStyle".}
proc fcQsciLexerCPP_override_virtual_defaultPaperWithStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_defaultPaperWithStyle".}
proc fQsciLexerCPP_virtualbase_setEditor(self: pointer, editor: pointer): void{.importc: "QsciLexerCPP_virtualbase_setEditor".}
proc fcQsciLexerCPP_override_virtual_setEditor(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setEditor".}
proc fQsciLexerCPP_virtualbase_refreshProperties(self: pointer, ): void{.importc: "QsciLexerCPP_virtualbase_refreshProperties".}
proc fcQsciLexerCPP_override_virtual_refreshProperties(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_refreshProperties".}
proc fQsciLexerCPP_virtualbase_styleBitsNeeded(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_styleBitsNeeded".}
proc fcQsciLexerCPP_override_virtual_styleBitsNeeded(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_styleBitsNeeded".}
proc fQsciLexerCPP_virtualbase_wordCharacters(self: pointer, ): cstring{.importc: "QsciLexerCPP_virtualbase_wordCharacters".}
proc fcQsciLexerCPP_override_virtual_wordCharacters(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_wordCharacters".}
proc fQsciLexerCPP_virtualbase_setAutoIndentStyle(self: pointer, autoindentstyle: cint): void{.importc: "QsciLexerCPP_virtualbase_setAutoIndentStyle".}
proc fcQsciLexerCPP_override_virtual_setAutoIndentStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setAutoIndentStyle".}
proc fQsciLexerCPP_virtualbase_setColor(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerCPP_virtualbase_setColor".}
proc fcQsciLexerCPP_override_virtual_setColor(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setColor".}
proc fQsciLexerCPP_virtualbase_setEolFill(self: pointer, eoffill: bool, style: cint): void{.importc: "QsciLexerCPP_virtualbase_setEolFill".}
proc fcQsciLexerCPP_override_virtual_setEolFill(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setEolFill".}
proc fQsciLexerCPP_virtualbase_setFont(self: pointer, f: pointer, style: cint): void{.importc: "QsciLexerCPP_virtualbase_setFont".}
proc fcQsciLexerCPP_override_virtual_setFont(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setFont".}
proc fQsciLexerCPP_virtualbase_setPaper(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerCPP_virtualbase_setPaper".}
proc fcQsciLexerCPP_override_virtual_setPaper(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setPaper".}
proc fQsciLexerCPP_virtualbase_readProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerCPP_virtualbase_readProperties".}
proc fcQsciLexerCPP_override_virtual_readProperties(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_readProperties".}
proc fQsciLexerCPP_virtualbase_writeProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerCPP_virtualbase_writeProperties".}
proc fcQsciLexerCPP_override_virtual_writeProperties(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_writeProperties".}
proc fQsciLexerCPP_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QsciLexerCPP_virtualbase_event".}
proc fcQsciLexerCPP_override_virtual_event(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_event".}
proc fQsciLexerCPP_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QsciLexerCPP_virtualbase_eventFilter".}
proc fcQsciLexerCPP_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_eventFilter".}
proc fQsciLexerCPP_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciLexerCPP_virtualbase_timerEvent".}
proc fcQsciLexerCPP_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_timerEvent".}
proc fQsciLexerCPP_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciLexerCPP_virtualbase_childEvent".}
proc fcQsciLexerCPP_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_childEvent".}
proc fQsciLexerCPP_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciLexerCPP_virtualbase_customEvent".}
proc fcQsciLexerCPP_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_customEvent".}
proc fQsciLexerCPP_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerCPP_virtualbase_connectNotify".}
proc fcQsciLexerCPP_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_connectNotify".}
proc fQsciLexerCPP_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerCPP_virtualbase_disconnectNotify".}
proc fcQsciLexerCPP_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_disconnectNotify".}
proc fcQsciLexerCPP_staticMetaObject(): pointer {.importc: "QsciLexerCPP_staticMetaObject".}
proc fcQsciLexerCPP_delete(self: pointer) {.importc: "QsciLexerCPP_delete".}


func init*(T: type gen_qscilexercpp_types.QsciLexerCPP, h: ptr cQsciLexerCPP): gen_qscilexercpp_types.QsciLexerCPP =
  T(h: h)
proc create*(T: type gen_qscilexercpp_types.QsciLexerCPP, ): gen_qscilexercpp_types.QsciLexerCPP =
  gen_qscilexercpp_types.QsciLexerCPP.init(fcQsciLexerCPP_new())

proc create*(T: type gen_qscilexercpp_types.QsciLexerCPP, parent: gen_qobject.QObject): gen_qscilexercpp_types.QsciLexerCPP =
  gen_qscilexercpp_types.QsciLexerCPP.init(fcQsciLexerCPP_new2(parent.h))

proc create*(T: type gen_qscilexercpp_types.QsciLexerCPP, parent: gen_qobject.QObject, caseInsensitiveKeywords: bool): gen_qscilexercpp_types.QsciLexerCPP =
  gen_qscilexercpp_types.QsciLexerCPP.init(fcQsciLexerCPP_new3(parent.h, caseInsensitiveKeywords))

proc metaObject*(self: gen_qscilexercpp_types.QsciLexerCPP, ): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fcQsciLexerCPP_metaObject(self.h))

proc metacast*(self: gen_qscilexercpp_types.QsciLexerCPP, param1: cstring): pointer =
  fcQsciLexerCPP_metacast(self.h, param1)

proc metacall*(self: gen_qscilexercpp_types.QsciLexerCPP, param1: cint, param2: cint, param3: pointer): cint =
  fcQsciLexerCPP_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qscilexercpp_types.QsciLexerCPP, s: cstring): string =
  let v_ms = fcQsciLexerCPP_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qscilexercpp_types.QsciLexerCPP, s: cstring): string =
  let v_ms = fcQsciLexerCPP_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc language*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_language(self.h))

proc lexer*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_lexer(self.h))

proc autoCompletionWordSeparators*(self: gen_qscilexercpp_types.QsciLexerCPP, ): seq[string] =
  var v_ma = fcQsciLexerCPP_autoCompletionWordSeparators(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc blockEnd*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_blockEnd(self.h))

proc blockStart*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_blockStart(self.h))

proc blockStartKeyword*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_blockStartKeyword(self.h))

proc braceStyle*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cint =
  fcQsciLexerCPP_braceStyle(self.h)

proc wordCharacters*(self: gen_qscilexercpp_types.QsciLexerCPP, ): cstring =
  (fcQsciLexerCPP_wordCharacters(self.h))

proc defaultColor*(self: gen_qscilexercpp_types.QsciLexerCPP, style: cint): gen_qcolor.QColor =
  gen_qcolor.QColor(h: fcQsciLexerCPP_defaultColor(self.h, style))

proc defaultEolFill*(self: gen_qscilexercpp_types.QsciLexerCPP, style: cint): bool =
  fcQsciLexerCPP_defaultEolFill(self.h, style)

proc defaultFont*(self: gen_qscilexercpp_types.QsciLexerCPP, style: cint): gen_qfont.QFont =
  gen_qfont.QFont(h: fcQsciLexerCPP_defaultFont(self.h, style))

proc defaultPaper*(self: gen_qscilexercpp_types.QsciLexerCPP, style: cint): gen_qcolor.QColor =
  gen_qcolor.QColor(h: fcQsciLexerCPP_defaultPaper(self.h, style))

proc keywords*(self: gen_qscilexercpp_types.QsciLexerCPP, set: cint): cstring =
  (fcQsciLexerCPP_keywords(self.h, set))

proc description*(self: gen_qscilexercpp_types.QsciLexerCPP, style: cint): string =
  let v_ms = fcQsciLexerCPP_description(self.h, style)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc refreshProperties*(self: gen_qscilexercpp_types.QsciLexerCPP, ): void =
  fcQsciLexerCPP_refreshProperties(self.h)

proc foldAtElse*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_foldAtElse(self.h)

proc foldComments*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_foldComments(self.h)

proc foldCompact*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_foldCompact(self.h)

proc foldPreprocessor*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_foldPreprocessor(self.h)

proc stylePreprocessor*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_stylePreprocessor(self.h)

proc setDollarsAllowed*(self: gen_qscilexercpp_types.QsciLexerCPP, allowed: bool): void =
  fcQsciLexerCPP_setDollarsAllowed(self.h, allowed)

proc dollarsAllowed*(self: gen_qscilexercpp_types.QsciLexerCPP, ): bool =
  fcQsciLexerCPP_dollarsAllowed(self.h)
